fix footer on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1356,10 +1356,6 @@ footer i {color: #6b1116;transition:color .3s ease;}
 footer i:hover {color: #FFF;}
 footer .caret {display: none;}
 
-.row.footer-nav {
-height: 35px;
-}
-
 #social ul {margin:0px; padding:0px; list-style: none;}
 #social li {margin:0px; padding: 0px; list-style:none; display: block; float:left;}
 #social li a {padding: 10px;}
@@ -1498,7 +1494,11 @@ padding: 20px 8px;
 
 .home-top{
    padding-bottom: 20%;
-}\
+}
+
+.row.footer-nav {
+height: 35px;
+}
 
 }
 
